# river-writer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  RIVER_SPECIFICATION.md  RUST_LEARNING_GUIDE.md  install_and_build.sh  river.config.toml
src/: ai.rs  config.rs  main.rs
