[package]
name = "river"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "river"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }